<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C1E"
    tools:context="com.example.finalcodetest2.MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic" />

    <!--   拍郎開始-->

    <TextView
        android:id="@+id/tv_cheatMode"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="240dp"
        android:text="@string/cheatMode"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/iv_badGuyImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="105dp"
        android:scaleType="centerInside"
        app:srcCompat="@mipmap/luchador_man_wrestler_icon" />

    <TextView
        android:id="@+id/tv_badGuyName"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="100dp"
        android:text="@string/playerBadGuy"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tv_badGuySay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="121dp"
        android:background="@drawable/dialog_shape"
        android:backgroundTint="#FFFFFF"
        android:padding="6dp"
        android:text="@string/badGuySay"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />
    <!--   拍郎結束-->

    <!--玩家一開始-->
    <ImageView
        android:id="@+id/iv_player1Img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="20dp"
        android:scaleType="centerInside"
        app:srcCompat="@mipmap/man_hat_icon"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/tv_player1Name"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="70dp"
        android:text="@string/player1Name"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="italic"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/tv_player1Say"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="202dp"
        android:layout_marginEnd="77dp"
        android:background="@drawable/dialog_shape"
        android:backgroundTint="#6090F0"
        android:padding="6dp"
        android:text="@string/player1Say"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="visible"/>
    <!--玩家一結束-->

    <!--玩家二開始-->
    <ImageView
        android:id="@+id/iv_player2Img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="20dp"
        android:scaleType="centerInside"
        app:srcCompat="@mipmap/woman_portrait_woman_icon"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_player2Name"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="70dp"
        android:text="@string/player2Name"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="italic"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_player2Say"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="202dp"
        android:layout_marginEnd="77dp"
        android:background="@drawable/dialog_shape"
        android:backgroundTint="#F54B6F"
        android:padding="6dp"
        android:text="@string/player2Say"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="invisible"/>
    <!--玩家二結束-->

    <!--炸彈開始-->
    <ImageView
        android:id="@+id/iv_bomb"
        android:layout_width="172dp"
        android:layout_height="171dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="280dp"
        app:srcCompat="@mipmap/bomb_explosive_icon" />

    <EditText
        android:id="@+id/et_inputNumber"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="335dp"
        android:background="@null"
        android:padding="5dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="italic"
        android:clickable="false"/>
    <!--炸彈結束-->

    <com.example.finalcodetest2.MyKeyboard
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        android:orientation="vertical" />

</RelativeLayout>